# TabletMode

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
app/: CMakeLists.txt  main.cpp
cmake/: CompilerFlags.cmake  Doxyfile.in  FindLibraries.cmake
include/TabletMode/: TabletMode.h
src/: CMakeLists.txt  TabletMode.cpp
