CMAKE_MINIMUM_REQUIRED(VERSION 3.1)
PROJECT(TabletMode)

SET(CMAKE_AUTOMOC ON)
SET(CMAKE_INCLUDE_CURRENT_DIR ON)

INCLUDE(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
CONAN_BASIC_SETUP()

INCLUDE(cmake/CompilerFlags.cmake REQUIRED)
INCLUDE(cmake/FindLibraries.cmake REQUIRED)

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(app)

